[tool.poetry]
name = "webpush"
version = "1.0.1"
description = "WebPush library for python"
authors = ["Alexey <delvinru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/delvinru/webpush-py"
repository = "https://github.com/delvinru/webpush-py"
keywords = ["webpush", "pwa", "pydantic"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
pyjwt = "^2.8.0"
cryptography = "^41.0.4"
email-validator = "^2.0.0.post2"

[tool.poetry.scripts]
vapid-gen = "webpush.cli:main"

[tool.poetry.group.dev.dependencies]
pynvim = {git = "https://github.com/neovim/pynvim"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
