[tool.poetry]
name = "webpush"
version = "1.0.3"
description = "WebPush library for python"
authors = ["Alexey <delvinru@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/delvinru/webpush-py"
repository = "https://github.com/delvinru/webpush-py"
keywords = ["webpush", "pwa", "pydantic"]


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.10.4"
pyjwt = "^2.10.1"
cryptography = "^41.0.7"
email-validator = "^2.2.0"

[tool.poetry.scripts]
vapid-gen = "webpush.cli:main"

[tool.poetry.group.dev.dependencies]
pynvim = {git = "https://github.com/neovim/pynvim"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
